# NoMercyGameModule

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENSE  build.sh  build_clang.sh  create_vs_project.bat  dependency_builder.py  game_module.code-workspace  rebuild.sh
game_impl/common/: service.h
game_impl/game/: Makefile-CMakeLists'e eklenecek  NoMercy.cpp  NoMercy.h  main.cpp
module/: CMakeLists.txt
module/include/: NoMercyGameModule.h  defines.h  game_module_impl.hpp  singleton.hpp
module/src/: game_module_impl.cpp  main.cpp
test/: CMakeLists.txt
test/src/: NoMercyServer.cpp  NoMercyServer.h  main.cpp
